--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
         "vue-template-compiler": "^2.5.22"
     },
     "dependencies": {
+        "bulma": "^0.7.2",
+        "validate.js": "^0.12.0",
         "vue-router": "^3.0.2",
         "vuex": "^3.1.0"
     }
