--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
         "bulma": "^0.7.2",
         "materialize-css": "^1.0.0-rc.2",
         "validate.js": "^0.12.0",
+        "vue-materialize": "^1.0.0",
         "vue-router": "^3.0.2",
+        "vuetify": "^1.4.2",
         "vuex": "^3.1.0"
     }
 }
